# statistics_25

./: main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
common/: evaluation.py  feature_engineering.py  preprocess.py  utils.py
configs/: base.yaml  blend.yaml  model_catboost.yaml  model_extratrees.yaml  model_lightgbm.yaml  model_logistic.yaml
models/: catboost_model.py  ensemble_blender.py  extratrees_model.py  lightgbm_model.py  logistic_woe.py  xgboost_model.py
output/: analysis_lark.md  credit_risk_multimodel_analysis.lark.md  metrics_blend.json  metrics_catboost.json  metrics_extratrees.json  metrics_lightgbm.json  metrics_logistic.json  metrics_logistic_woe.json  metrics_summary.json  metrics_xgboost.json  submission_best.csv  submission_catboost.csv  submission_extratrees.csv  submission_lightgbm.csv  submission_logistic.csv  submission_xgboost.csv  summary_metrics.csv
